--- a/rust-client-proxy/Cargo.toml
+++ b/rust-client-proxy/Cargo.toml
@@ -7,10 +7,12 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+proptest = "0.9.2"
 
 [target.'cfg(target_os="android")'.dependencies]
 jni = { version = "0.13.1", default-features = false }
-client = { path = "~/Projects/libra/client" }
+# change this directory for the path of Libra client 
+client = { path = "/home/hunter/Projects/work/libra/client" }
 
 [lib]
 crate-type = ["cdylib"]
