--- a/rust-client-proxy/Cargo.toml
+++ b/rust-client-proxy/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
 proptest = "0.9.2"
 client = { path = "/home/hunter/Projects/work/libra/client" }
@@ -14,8 +17,9 @@ client = { path = "/home/hunter/Projects/work/libra/client" }
 # change this directory for the path of Libra client 
 jni = { version = "0.13.1", default-features = false }
 
-[lib]
-crate-type = ["cdylib"]
+[target.'cfg(target_os="wasm")'.dependencies]
+wasm-bindgen = "0.2"
+
 
 [profile.release]
 #abort
