--- a/rust-client-proxy/Cargo.toml
+++ b/rust-client-proxy/Cargo.toml
@@ -10,11 +10,11 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-proptest = "0.9.2"
-client = { path = "/home/hunter/Projects/work/libra/client" }
+# proptest = "0.9.2"
+client = { path = "/home/hunter/Projects/work/libra/client" } # change this directory for the path of Libra client 
+hex = "0.3.2"
 
 [target.'cfg(target_os="android")'.dependencies]
-# change this directory for the path of Libra client 
 jni = { version = "0.13.1", default-features = false }
 
 [target.'cfg(target_os="wasm")'.dependencies]
