add method get_balance for x86_64.rs

--- a/rust-client-proxy/test/x86_64/Makefile
+++ b/rust-client-proxy/test/x86_64/Makefile
@@ -1,7 +1,7 @@
 CXX = clang++
 
 test : clean
-	$(CXX) -std=c++2a -stdlib=libc++ -g main.cpp libra_client.cpp -o test -L../../target/debug -lclient_proxy
+	$(CXX) -std=c++11 -stdlib=libc++ -g main.cpp libra_client.cpp -o test -L../../target/debug -lclient_proxy
 
 clean :
 	rm -f test
