--- a/rust-client-proxy/Cargo.toml
+++ b/rust-client-proxy/Cargo.toml
@@ -13,6 +13,7 @@ crate-type = ["cdylib"]
 # proptest = "0.9.2"
 client = { path = "/home/hunter/Projects/work/libra/client" } # change this directory for the path of Libra client 
 hex = "0.3.2"
+libc = "0.2"
 
 [target.'cfg(target_os="android")'.dependencies]
 jni = { version = "0.13.1", default-features = false }
