add FFI method transfer_ coins_int to x86_64.rs

--- a/rust-client-proxy/.vscode/settings.json
+++ b/rust-client-proxy/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "string_view": "cpp",
         "iosfwd": "cpp",
-        "iomanip": "cpp"
+        "iomanip": "cpp",
+        "utility": "cpp"
     }
 }
