--- a/rust-client-proxy/Cargo.toml
+++ b/rust-client-proxy/Cargo.toml
@@ -10,8 +10,9 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-# proptest = "0.9.2"
-client = { path = "/home/hunter/Projects/work/libra/client" } # change this directory for the path of Libra client 
+# change this directory for the path of Libra client 
+client = { path = "/home/hunter/Projects/work/libra/client" } 
+libra-types = { path = "/home/hunter/Projects/work/libra/types" }
 hex = "0.3.2"
 libc = "0.2"
 
