--- a/cppSdk/test/Makefile
+++ b/cppSdk/test/Makefile
@@ -4,4 +4,4 @@ test : clean
 	$(CXX) -std=c++11 -stdlib=libc++ -g main.cpp ../libra_client.cpp -o test -L../../rust-client-proxy/target/debug/ -lclient_proxy -I../
 
 clean :
-	rm -f test
+	rm -f test log.txt
