--- a/rust-client-proxy/Cargo.toml
+++ b/rust-client-proxy/Cargo.toml
@@ -20,6 +20,7 @@ bytecode-source-map = { path = "/home/hunter/Projects/work/libra/language/compil
 stdlib = { path = "/home/hunter/Projects/work/libra/language/stdlib", version = "0.1.0" }
 vm = { path = "/home/hunter/Projects/work/libra/language/vm", version = "0.1.0" }
 
+serde_json = "1.0.40"
 hex = "0.3.2"
 libc = "0.2"
 
