--- a/rust-client-proxy/Cargo.toml
+++ b/rust-client-proxy/Cargo.toml
@@ -23,6 +23,7 @@ vm = { path = "/home/hunter/Projects/work/libra/language/vm", version = "0.1.0" 
 serde_json = "1.0.40"
 hex = "0.3.2"
 libc = "0.2"
+tempfile = "3.0"
 
 [target.'cfg(target_os="android")'.dependencies]
 jni = { version = "0.13.1", default-features = false }
