--- a/rust-client-proxy/Cargo.toml
+++ b/rust-client-proxy/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 # change this directory for the path of Libra client 
-client = { path = "/home/hunter/Projects/work/libra/client" } 
+client = { path = "/home/hunter/Projects/work/libra/client", version = "0.1.0" } 
 libra-types = { path = "/home/hunter/Projects/work/libra/types" }
 compiler = { path = "/home/hunter/Projects/work/libra/language/compiler"  }
 bytecode-verifier = { path = "/home/hunter/Projects/work/libra/language/bytecode-verifier", version = "0.1.0" }
@@ -20,11 +20,15 @@ bytecode-source-map = { path = "/home/hunter/Projects/work/libra/language/compil
 stdlib = { path = "/home/hunter/Projects/work/libra/language/stdlib", version = "0.1.0" }
 vm = { path = "/home/hunter/Projects/work/libra/language/vm", version = "0.1.0" }
 transaction-builder = { path = "/home/hunter/Projects/work/libra/language/transaction-builder", version = "0.1.0" }
+lcs = { path = "/home/hunter/Projects/work/libra/common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
 
 serde_json = "1.0.40"
+serde = { version = "1.0.99", default-features = false }
+lazy_static = { version = "1.3.0", default-features = false }
 hex = "0.3.2"
 libc = "0.2"
 tempdir = "0.3.7"
+failure = "0.1.3"
 
 [target.'cfg(target_os="android")'.dependencies]
 jni = { version = "0.13.1", default-features = false }
