update class VStakeImp

--- a/cppSdk/test/Makefile
+++ b/cppSdk/test/Makefile
@@ -1,10 +1,11 @@
 CXX = clang++
 
 test : clean
-	$(CXX) -std=c++17 -stdlib=libc++ --debug -Wall -Werror main.cpp ../libra_client.cpp -o test -L../../rust-client-proxy/target/debug/ -lclient_proxy -I../
-
+	$(CXX) -g -std=c++17 -Wall -Werror main.cpp ../libra_client.cpp -o test -L../../rust-client-proxy/target/debug/ -lclient_proxy -I../ -lstdc++fs
+	# -stdlib=libc++ 
+	
 gcc : clean
-	g++ -std=c++17 -g -Wall main.cpp ../libra_client.cpp -o test -L../../rust-client-proxy/target/debug/ -lclient_proxy -I../ -lstdc++fs
+	g++ -std=c++11 -g -Wall main.cpp ../libra_client.cpp -o test -L../../rust-client-proxy/target/debug/ -lclient_proxy -I../
 
 clean :
 	rm -f test log.txt
