--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,14 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "lldb",
+            "request": "launch",
+            "name": "(lldb) Launch",
+            "program": "${workspaceFolder}/cppSdk/test/test",
+            "args": [],
+            "cwd": "${workspaceFolder}/cppSdk/test"
+        },
+        {
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
@@ -23,22 +31,5 @@
                 }
             ]
         },
-        {
-            "type": "lldb",
-            "request": "launch",
-            "name": "Launch",
-            "program": "${workspaceFolder}/cppSdk/test/test",
-            "args": [],
-            "cwd": "${workspaceFolder}/cppSdk/test",
-            "stopAtEntry": true,
-            "environment": [],
-            "externalConsole": true,
-            "MIMode": "lldb",
-            "logging": {
-                "trace": true,
-                "traceResponse": true,
-                "engineLogging": true
-            }
-        }
     ]
 }
