--- a/cppSdk/test/Makefile
+++ b/cppSdk/test/Makefile
@@ -7,5 +7,8 @@ test : clean
 gcc : clean
 	g++ -std=c++11 -g -Wall main.cpp ../libra_client.cpp -o test -L../../rust-client-proxy/target/debug/ -lclient_proxy -I../
 
+mingw : clean
+	x86_64-w64-mingw32-g++ -std=c++11 -g -Wall main.cpp ../libra_client.cpp -o test -L../../rust-client-proxy/target/debug/ -lclient_proxy -I../
+
 clean :
 	rm -f test log.txt
