add code to exporting interface for Python

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,7 +48,8 @@
         "cinttypes": "cpp",
         "typeinfo": "cpp",
         "filesystem": "cpp",
-        "ratio": "cpp"
+        "ratio": "cpp",
+        "set": "cpp"
     },
     "git.ignoreLimitWarning": true
 }
