--- a/rust-client-proxy/Cargo.toml
+++ b/rust-client-proxy/Cargo.toml
@@ -28,7 +28,8 @@ lazy_static = { version = "1.3.0", default-features = false }
 hex = "0.3.2"
 libc = "0.2"
 tempdir = "0.3.7"
-failure = "0.1.3"
+anyhow = "1.0"
+#failure = "0.1.3"
 
 [target.'cfg(target_os="android")'.dependencies]
 jni = { version = "0.13.1", default-features = false }
