--- a/cppSdk/testnet/Makefile
+++ b/cppSdk/testnet/Makefile
@@ -1,12 +1,28 @@
 CXX = clang++
 
 transfer : clean
-	$(CXX) -g -std=c++17 -stdlib=libc++ -Wall -Werror \
+	$(CXX) -O2 -std=c++17 -stdlib=libc++ -Wall -Werror \
 	-o transfer \
-	-I../ \
+	-I../src/ \
 	-L../../rust-client-proxy/target/debug/ \
 	-lclient_proxy \
-	transfer.cpp ../libra_client.cpp
-	
+	src/transfer.cpp ../src/libra_client.cpp
+
+debug : clean
+	clang++ -g -std=c++17 -Wall -Werror \
+	-o transfer \
+	-I../src/ \
+	-L../../rust-client-proxy/target/debug/ \
+	-lclient_proxy \
+	src/transfer.cpp ../src/libra_client.cpp
+
+gcc : clean
+	g++ -O2 -std=c++17 -Wall \
+	-o transfer \
+	-I../src \
+	-L../../rust-client-proxy/target/debug/ \
+	src/transfer.cpp ../src/libra_client.cpp \
+	-lclient_proxy \
+
 clean :
 	rm -f transfer
