update makefile files

--- a/cppSdk/testnet/Makefile
+++ b/cppSdk/testnet/Makefile
@@ -6,14 +6,14 @@ transfer : clean
 	-I../src/ \
 	-L../../rust-client-proxy/target/debug/ \
 	-lclient_proxy \
-	src/transfer.cpp ../src/libra_client.cpp
+	src/transfer.cpp ../src/violas_sdk.cpp
 
 debug : clean
 	clang++ -g -std=c++17 -Wall -Werror \
 	-o transfer \
 	-I../src/ \
 	-L../../rust-client-proxy/target/debug/ \
-	src/transfer.cpp ../src/libra_client.cpp \
+	src/transfer.cpp ../src/violas_sdk.cpp \
 	-lclient_proxy -lstdc++fs\
 
 gcc : clean
@@ -21,8 +21,8 @@ gcc : clean
 	-o transfer \
 	-I../src \
 	-L../../rust-client-proxy/target/debug/ \
-	src/transfer.cpp ../src/libra_client.cpp \
+	src/transfer.cpp ../src/violas_sdk.cpp \
 	-lclient_proxy -lstdc++fs\
 
 clean :
-	rm -f transfer
+	rm -f transfer log.txt
