--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,7 +49,22 @@
         "typeinfo": "cpp",
         "filesystem": "cpp",
         "ratio": "cpp",
-        "set": "cpp"
+        "set": "cpp",
+        "cstring": "cpp",
+        "strstream": "cpp",
+        "bitset": "cpp",
+        "chrono": "cpp",
+        "codecvt": "cpp",
+        "complex": "cpp",
+        "condition_variable": "cpp",
+        "map": "cpp",
+        "mutex": "cpp",
+        "thread": "cpp",
+        "cfenv": "cpp",
+        "typeindex": "cpp",
+        "valarray": "cpp",
+        "variant": "cpp",
+        "bit": "cpp"
     },
     "git.ignoreLimitWarning": true
 }
