update exception info for cppSdk

--- a/PythonSdk/Makefile
+++ b/PythonSdk/Makefile
@@ -1,4 +1,4 @@
-python : 
+violas : 
 	clang++ -g -std=c++17 -fPIC -shared -Wall -Werror -DPYTHON \
 	-o violas.so \
 	../cppSdk/src/violas_sdk.cpp \
@@ -6,7 +6,16 @@ python :
 	-L../rust-client-proxy/target/debug/ \
 	-I../cppSdk/src \
 	-lclient_proxy -lstdc++fs
-		
+
+python36 : 
+	clang++ -g -std=c++17 -fPIC -shared -Wall -Werror -DPYTHON \
+	-o violas.so \
+	../cppSdk/src/violas_sdk.cpp \
+	-I/usr/include/python3.6m -lboost_python3-py36 \
+	-L../rust-client-proxy/target/debug/ \
+	-I../cppSdk/src \
+	-lclient_proxy -lstdc++fs
+
 release : 
 	clang++ -O3 -std=c++17 -fPIC -shared -Wall -Werror -DPYTHON \
 	-o violas.so \
