--- a/rust-client-proxy/Cargo.toml
+++ b/rust-client-proxy/Cargo.toml
@@ -10,6 +10,15 @@ edition = "2018"
 crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
+anyhow = "1.0"
+serde_json = "1.0.40"
+serde = { version = "1.0.96", default-features = false }
+lazy_static = { version = "1.3.0", default-features = false }
+tonic = { git = "https://github.com/hyperium/tonic.git" }
+hex = "0.3.2"
+libc = "0.2"
+tempdir = "0.3"
+
 # change this directory for the path of Libra client 
 client = { path = "/home/hunter/libra/client", version = "0.1.0" } 
 libra-types = { path = "/home/hunter/libra/types" }
@@ -22,13 +31,7 @@ vm = { path = "/home/hunter/libra/language/vm", version = "0.1.0" }
 transaction-builder = { path = "/home/hunter/libra/language/transaction-builder", version = "0.1.0" }
 lcs = { path = "/home/hunter/libra/common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
 
-anyhow = "1.0"
-serde_json = "1.0.40"
-serde = { version = "1.0.96", default-features = false }
-lazy_static = { version = "1.3.0", default-features = false }
-hex = "0.3.2"
-libc = "0.2"
-tempdir = "0.3"
+
 
 #failure = "0.1.3"
 
