--- a/rust-client-proxy/Cargo.toml
+++ b/rust-client-proxy/Cargo.toml
@@ -14,13 +14,13 @@ anyhow = "1.0"
 serde_json = "1.0.40"
 serde = { version = "1.0.96", default-features = false }
 lazy_static = { version = "1.3.0", default-features = false }
-tonic = { git = "https://github.com/hyperium/tonic.git" }
+# tonic = { git = "https://github.com/hyperium/tonic.git" }
 hex = "0.3.2"
 libc = "0.2"
 tempdir = "0.3"
 
 # change this directory for the path of Libra client 
-client = { path = "/home/hunter/libra/client", version = "0.1.0" } 
+cli = { path = "/home/hunter/libra/client/cli", version = "0.1.0" } 
 libra-types = { path = "/home/hunter/libra/types" }
 compiler = { path = "/home/hunter/libra/language/compiler"  }
 bytecode-verifier = { path = "/home/hunter/libra/language/bytecode-verifier", version = "0.1.0" }
