--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,23 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python: Current File",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal"
+        },
+        {
             "type": "lldb",
             "request": "launch",
             "name": "Launch transfer",
             "program": "${workspaceFolder}/cppSdk/testnet/transfer",
-            "args": ["13.68.141.242", "40001", "governor1"],
+            "args": [
+                "125.39.5.57",
+                "40001",
+                "governor",
+                "/home/hunter/Downloads/mint_tianjin.key"
+            ],
             "cwd": "${workspaceFolder}/cppSdk/testnet"
         },
         {
