rm folder AndoridClientSdk and mv jni_violas_sdk from Android to cppSdk

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,5 +68,6 @@
     },
     "git.ignoreLimitWarning": true,
     "cmake.configureOnOpen": false,
-    "python.pythonPath": "python3"
+    "python.pythonPath": "python3",
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
