add makefile to cppSdk/src

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,5 +69,11 @@
     "git.ignoreLimitWarning": true,
     "cmake.configureOnOpen": false,
     "python.pythonPath": "python3",
-    "java.configuration.updateBuildConfiguration": "interactive"
+    "java.configuration.updateBuildConfiguration": "interactive",
+    "files.exclude": {
+        "**/.classpath": true,
+        "**/.project": true,
+        "**/.settings": true,
+        "**/.factorypath": true
+    }
 }
