--- a/cppSdk/makefile
+++ b/cppSdk/makefile
@@ -1,20 +1,67 @@
-all : libcppSdk
+SUBDIRS	= src
+   
+.PHONY: subdirs $(SUBDIRS) clean android
 
-libcppSdk : violas_sdk.o
-	ar -crv lib/libcppSdk.a violas_sdk.o
+subdirs: $(SUBDIRS)
+$(SUBDIRS):
+	$(MAKE) -C $@
 
-violas_sdk.o :
-	$(CXX) -o2 -std=c++17 \
-	-c src/violas_sdk.cpp \
-	-o violas_sdk.o
+android:
+	@for dir in ${SUBDIRS}; do \
+		${MAKE} -C $$dir android; \
+	done
 
-jni_violas_sdk.o :
-	$(CXX) -o2 -std=c++17 \
-	-c src/jni_violas_sdk.cpp \
-	-o jni_violas_sdk.o
+java:
+	@for dir in ${SUBDIRS}; do \
+		${MAKE} -C $$dir java; \
+	done
 
-android : violas_sdk.o jni_violas_sdk.o
-	$(AR) -crv lib/libcppSdk-arm64v8a.a violas_sdk.o jni_violas_sdk.o
+clean: 
+	@for dir in ${SUBDIRS}; do \
+		${MAKE} -C $$dir clean; \
+	done
 
-clean :
-	rm -f lib/libcppSdk.a lib/libcppSdk-arm64v8a.a violas_sdk.o
+# CXXFLAGS= -wall -werror -std=c++17
+# LDFLAGS=
+# LIBS=
+# BIN= lib
+
+# TARGET= libcppSdk.a
+# SRC= src
+# OBJS= violas_sdk.o
+
+# all : $(TARGET)
+
+# $(TARGET) : $(OBJS)
+# 	$(AR) -crv $(BIN)/$(TARGET) $(OBJS)
+
+# violas_sdk.o : src/violas_sdk.cpp
+#  	$(CXX) $(CXXFLAGS) -c src/violas_sdk.cpp -o violas_sdk.o
+
+# %.o : $(SRC)/(%.cpp) $(SRC)/%.h $(SRC)/%.hpp
+# 	$(CXX) $(CXXFLAGS) -c $(SRC)/$< -o $@
+
+
+# libcppSdk : violas_sdk.o
+# 	$(AR) -crv lib/libcppSdk.a violas_sdk.o
+
+# android : violas_sdk.o jni_violas_sdk.o
+# 	$(AR) -crv lib/libcppSdk-arm64v8a.a violas_sdk.o jni_violas_sdk.o
+
+# java : violas_sdk.o jni_violas_sdk.o
+# 	$(AR) -crv lib/libcppSdk.a violas_sdk.o jni_violas_sdk.o
+
+# violas_sdk.o :
+# 	$(CXX) -o2 -std=c++17 \
+# 	 \
+# 	-c src/violas_sdk.cpp \
+# 	-o violas_sdk.o
+
+# jni_violas_sdk.o :
+# 	$(CXX) -o2 -std=c++17 \
+# 	-D $(CXXFLAGS) \
+# 	-c src/jni_violas_sdk.cpp \
+# 	-o jni_violas_sdk.o
+
+# clean :
+# 	rm -f $(TARGET) : $(OBJS)
