changed package name from io.violas.sdk.java to io.violas.sdk in Java code

--- a/Java/src/jni/Makefile.am
+++ b/Java/src/jni/Makefile.am
@@ -1,6 +1,6 @@
 lib_LTLIBRARIES = libviolas_sdk_jni.la
 
-libviolas_sdk_jni_la_SOURCES = io_violas_sdk_java_Client.cpp  io_violas_sdk_java_Token.cpp
+libviolas_sdk_jni_la_SOURCES = io_violas_sdk_Client.cpp  io_violas_sdk_Token.cpp
 libviolas_sdk_jni_la_CXXFLAGS = -std=c++17 \
                                 -I$(top_srcdir)/cppSdk/src \
                                 -I/usr/lib/jvm/java-11-openjdk-amd64/include \
