--- a/cppSdk/src/Makefile.am
+++ b/cppSdk/src/Makefile.am
@@ -11,4 +11,4 @@ libjniSdk_la_CXXFLAGS = -std=c++17 -fPIC \
                         -I/usr/lib/jvm/java-11-openjdk-amd64/include \
                         -I/usr/lib/jvm/java-11-openjdk-amd64/include/linux/
 libjniSdk_la_LDFLAGS = -L$(top_srcdir)/rust-client-proxy/target/debug
-libjniSdk_la_LIBADD = -lstdc++fs -l:libclient_proxy.a
+libjniSdk_la_LIBADD = -lstdc++fs -lclient_proxy
