Clinet can execite mv script file

--- a/cppSdk/testnet/src/Makefile.am
+++ b/cppSdk/testnet/src/Makefile.am
@@ -12,4 +12,4 @@ test_jni_CXXFLAGS= -std=c++17 -I$(top_srcdir)/cppSdk/src
 test_jni_LDFLAGS = -Wl,-rpath=./bin,-rpath=../bin,-rpath=/usr/local/lib \
                   -L../../src/.libs -L$(top_srcdir)/rust-client-proxy/target/debug \
                   -L../../../lib
-test_jni_LDADD = -lviolas_sdk_jni -l:libstdc++fs.a -l:libclient_proxy.a
+test_jni_LDADD = -lviolas_sdk_jni -l:libstdc++fs.a -lclient_proxy
