--- a/rust-client-proxy/Cargo.toml
+++ b/rust-client-proxy/Cargo.toml
@@ -18,6 +18,7 @@ lazy_static = { version = "1.3.0", default-features = false }
 hex = "0.3.2"
 libc = "0.2"
 tempdir = "0.3"
+once_cell = "1.3.1"
 
 # change this directory for the path of Libra client 
 cli = { path = "/home/hunter/libra/client/cli", version = "0.1.0" } 
@@ -31,7 +32,7 @@ vm = { path = "/home/hunter/libra/language/vm", version = "0.1.0" }
 transaction-builder = { path = "/home/hunter/libra/language/transaction-builder", version = "0.1.0" }
 lcs = { path = "/home/hunter/libra/common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
 move-lang = { path = "/home/hunter/libra/language/move-lang" }
-
+move-core-types = { path = "/home/hunter/libra/language/move-core/types"}
 
 #failure = "0.1.3"
 
