add a lib configuration liblibra_sdk.la into cppSdk/src/Makefile.am and update cppSdk/README

--- a/cppSdk/src/Makefile.am
+++ b/cppSdk/src/Makefile.am
@@ -1,10 +1,16 @@
-lib_LTLIBRARIES = libcppSdk.la libjniSdk.la
+lib_LTLIBRARIES = libviolas_sdk.la libjniSdk.la liblibra_sdk.la
 
-libcppSdk_la_SOURCES = violas_sdk.cpp
+libviolas_sdk_la_SOURCES = violas_sdk.cpp
 #libcppSdk_la_HEADERS = violas_sdk.hpp
-libcppSdk_la_CXXFLAGS = -Wall -Werror -std=c++17
-libcppSdk_la_LDFLAGS = -L$(top_srcdir)/rust-client-proxy/target/debug
-libcppSdk_la_LIBADD = -lstdc++fs -lclient_proxy
+libviolas_sdk_la_CXXFLAGS = -Wall -Werror -std=c++17
+libviolas_sdk_la_LDFLAGS = -L$(top_srcdir)/rust-client-proxy/target/debug
+libviolas_sdk_la_LIBADD = -lstdc++fs -lclient_proxy
+
+liblibra_sdk_la_SOURCES = violas_sdk.cpp
+#libcppSdk_la_HEADERS = violas_sdk.hpp
+liblibra_sdk_la_CXXFLAGS = -Wall -Werror -std=c++17 -DLIB_NAME=Libra
+liblibra_sdk_la_LDFLAGS = -L$(top_srcdir)/rust-client-proxy/target/debug
+liblibra_sdk_la_LIBADD = -lstdc++fs -lclient_proxy
 
 libjniSdk_la_SOURCES = violas_sdk.cpp jni_violas_sdk.cpp
 libjniSdk_la_CXXFLAGS = -std=c++17 -fPIC \
