update jni and Java Demo

--- a/Java/src/jni/Makefile.am
+++ b/Java/src/jni/Makefile.am
@@ -2,7 +2,7 @@ lib_LTLIBRARIES = libviolas_sdk_jni.la
 
 if DEBUG
     CLIENT_PROXY_PATH = -L$(top_srcdir)/rust-client-proxy/target/debug
-    CLIENT_PROXY =
+    CLIENT_PROXY = -lclient_proxy
 else
     CLIENT_PROXY_PATH = -L$(top_srcdir)/rust-client-proxy/target/release
     CLIENT_PROXY = -l:libclient_proxy.a
